--- a/modules_application/presentation/src/main/res/values/strings.xml
+++ b/modules_application/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Vama Task</string>
     <string name="toolbar_title">Top 100 Albums</string>
+    <string name="copyright">Copyright 2022 Apple Inc. All rights reserved.</string>
+    <string name="visit_the_album">Visit The Album</string>
 </resources>
